[package]
name = "lox_ast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer_benchmarks"
harness = false

[dependencies]
anyhow = "1.0.47"
clap = "2.33.3"
lazy_static = "1.4.0"

